--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet" async>
   <link async rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOLE_MAPS_API_KEY%&libraries=places"></script>
   <link rel="stylesheet" href="https://unpkg.com/react-instantsearch-theme-algolia@4.0.0/style.min.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
     crossorigin="" async/>
